--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -1,5 +1,3 @@
-.header-container {
-    float: left;
-    background-color: aquamarine;
-    min-width: 100%;
+h2 {
+    justify-content: center;
 }
