--- a/src/components/NavBar.css
+++ b/src/components/NavBar.css
@@ -2,7 +2,6 @@ ul {
     list-style-type: none;
     margin-right: 1.5em;
     overflow: hidden;
-    display: flex;
     justify-content: right;
 }
 
@@ -12,7 +11,7 @@ li {
 
 li a{
     display: block;
-    color: white;
+    color: blue;
     text-align: center;
     padding: 16px;
     text-decoration: none;
