--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -1,3 +1,9 @@
-h2 {
-    justify-content: center;
+.header-container{
+    margin-top: 3%;
+    padding: 0%;
+}
+
+.header-title{
+    width: fit-content;
+    margin-left: 3%;
 }
