--- a/src/components/NavBar.css
+++ b/src/components/NavBar.css
@@ -1,8 +1,9 @@
-ul {
+.nav-list {
     list-style-type: none;
     margin-right: 1.5em;
     overflow: hidden;
     justify-content: right;
+    
 }
 
 li {
