--- a/src/index.css
+++ b/src/index.css
@@ -9,15 +9,16 @@
   font-size: inherit;
   box-shadow: none;
   box-sizing: border-box;
+  background-color: #231942;
 }
 
 a {
   font-weight: 500;
-  color: #646cff;
+  color: #9F86C0;
   text-decoration: inherit;
 }
 a:hover {
-  color: #535bf2;
+  color: #5E548E;
 }
 
 body {
@@ -31,19 +32,21 @@ h1 {
   line-height: 1.1;
 }
 
-button {
+.button {
   border-radius: 8px;
-  border: 1px solid transparent;
+  border: 1px solid;
+  color: #9F86C0;
   padding: 0.6em 1.2em;
   font-size: 1em;
   font-weight: 500;
   font-family: inherit;
-  background-color: #1a1a1a;
+  background-color: #231942;
   cursor: pointer;
   transition: border-color 0.25s;
 }
-button:hover {
-  border-color: #646cff;
+.button:hover {
+  color: #231942;
+  background-color: #5E548E;
 }
 button:focus,
 button:focus-visible {
@@ -52,11 +55,11 @@ button:focus-visible {
 
 @media (prefers-color-scheme: light) {
   :root {
-    color: #213547;
+    color: #9F86C0;
     background-color: #ffffff;
   }
   a:hover {
-    color: #747bff;
+    color: #5E548E;
   }
   button {
     background-color: #f9f9f9;
