--- a/src/components/NavBar.css
+++ b/src/components/NavBar.css
@@ -12,7 +12,7 @@ li {
 
 li a{
     display: block;
-    color: blue;
+    color: #9F86C0;
     text-align: center;
     padding: 16px;
     text-decoration: none;
